Kelsey Development Sandbox/src/objects/DS_Background_Family_Info_F__c.object
<CustomObject>
    <fields>
        <fullName>BDOV__c</fullName>
        <formula>Baseline_ID__r.BDOV__c</formula>
        <label>BDOV</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Baseline_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Baseline ID</label>
        <referenceTo>DS_Background_Family_Info_B__c</referenceTo>
        <relationshipLabel>DS Background Family Info F</relationshipLabel>
        <relationshipName>DS_Background_Family_Info_F</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <formula>Client__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>DS Background Family Info F</relationshipLabel>
        <relationshipName>DS_Background_Family_Info_F</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FABSENTUX__c</fullName>
        <description>2. If absent how many days were unexcused absences?</description>
        <label>FABSENTUX</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>96</fullName>
                </value>
                <value>
                    <fullName>97</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FABSENT__c</fullName>
        <description>2. During the past 30 days of school, how many days were you absent for any reason?</description>
        <label>FABSENT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>96</fullName>
                </value>
                <value>
                    <fullName>97</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FADHOMECHECK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2.  Total number of adults living in home</description>
        <label>FADHOMECHECK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FADHOMSP__c</fullName>
        <description>2.  Total Number of adults, Specified</description>
        <label>FADHOMSP</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FAGE__c</fullName>
        <description>Child&apos;s age (Calculated Value)</description>
        <label>FAGE</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FAUNMIL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1. Aunt is service member</description>
        <label>FAUNMIL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FBROMIL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1. Brother is service member</description>
        <label>FBROMIL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCARESYS__c</fullName>
        <description>7. Please rate the child and caregiving system</description>
        <label>FCARESYS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCHHOMECHECK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>3.  Total number of children living in child&apos;s home</description>
        <label>FCHHOMECHECK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCHHOMSP__c</fullName>
        <description>3. Total number of children, Specified</description>
        <label>FCHHOMSP</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCINANY__c</fullName>
        <description>1. Is the child currently covered by any type of insurance?</description>
        <label>FCINANY</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCINCHIP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1a. Child&apos;s insurance CHIP</description>
        <label>FCINCHIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCINFFS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1a. Child&apos;s insurance Fee-For-Service</description>
        <label>FCINFFS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCINHMO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1a. Child&apos;s insurance HMO</description>
        <label>FCINHMO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCINIH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1a. Child&apos;s insurance Indian Health</description>
        <label>FCINIH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCINMEDD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1a. Child&apos;s insurance Medicaid</description>
        <label>FCINMEDD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCINMEDR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1a. Child&apos;s insurance Medicare</description>
        <label>FCINMEDR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCINMHC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1a. Child&apos;s insurance is Military Health</description>
        <label>FCINMHC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCINOPRI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1a. Child&apos;s insurance Other Private</description>
        <label>FCINOPRI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCINOPRS__c</fullName>
        <description>1a. Child&apos;s insurance Other Private Specified</description>
        <label>FCINOPRS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCINOPSP__c</fullName>
        <description>1a. Child&apos;s insurance Other Public Specified</description>
        <label>FCINOPSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCINOPUB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1a. Child&apos;s insurance Other Public</description>
        <label>FCINOPUB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCINPBUK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1a. Public insurance is unknown</description>
        <label>FCINPBUK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCINPPO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1a. Child&apos;s insurance PPO</description>
        <label>FCINPPO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCINPRIV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1a. Child&apos;s insurance Private</description>
        <label>FCINPRIV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCINPRUK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1a. Child&apos;s Private insurance Unknown</description>
        <label>FCINPRUK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCINPUB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1a. Child&apos;s insurance Public</description>
        <label>FCINPUB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCOUMIL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1. Cousin is service member</description>
        <label>FCOUMIL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FDADMIL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1. Father is service member</description>
        <label>FDADMIL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FDOV__c</fullName>
        <description>1. Followup Date of visit</description>
        <label>FDOV</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FEDUCATE__c</fullName>
        <description>1. What is the highest level of education you have finished, whether or not you received a degree?</description>
        <label>FEDUCATE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>96</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FETSTATSP__c</fullName>
        <description>3. End of treatment status is Other Specified</description>
        <label>FETSTATSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FETSTAT__c</fullName>
        <description>3. End of treatment status</description>
        <label>FETSTAT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>98</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FFAMRES__c</fullName>
        <description>6. Please rate your family&apos;s resources</description>
        <label>FFAMRES</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FGRAMIL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1. Grandparent is service member</description>
        <label>FGRAMIL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FGUARDSP__c</fullName>
        <description>7.  Legal guardian is Other Specified</description>
        <label>FGUARDSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FGUARD__c</fullName>
        <description>7.  Who is currently the legal guardian for this child?</description>
        <label>FGUARD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>98</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FHEIGHFT__c</fullName>
        <description>13. Height Feet</description>
        <label>FHEIGHFT</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FHEIGHIN__c</fullName>
        <description>13. Height Inches</description>
        <label>FHEIGHIN</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FHISALL__c</fullName>
        <description>1. Allergies is the health condition</description>
        <label>FHISALL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FHISASTH__c</fullName>
        <description>2. Asthma is the health condition</description>
        <label>FHISASTH</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FHISCAN__c</fullName>
        <description>3. Cancer is the health condition</description>
        <label>FHISCAN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FHISDEN__c</fullName>
        <description>4.. Dental Conditions  is the health condition</description>
        <label>FHISDEN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FHISDIAB__c</fullName>
        <description>5. Diabetes is the health condition</description>
        <label>FHISDIAB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FHISEI__c</fullName>
        <description>13. Recurrent Ear Infections is the health condition</description>
        <label>FHISEI</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FHISENCO__c</fullName>
        <description>6. Encopresis is the health condition</description>
        <label>FHISENCO</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FHISENUR__c</fullName>
        <description>7. Enuresis is the health condition</description>
        <label>FHISENUR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FHISFEED__c</fullName>
        <description>8. Feeding Conditions (e.g., eats non-foods, has swallowing difficulties, etc.) is the health condition</description>
        <label>FHISFEED</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FHISGI__c</fullName>
        <description>9. GI Problems is the health condition</description>
        <label>FHISGI</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FHISHED__c</fullName>
        <description>10. Headaches is the health condition</description>
        <label>FHISHED</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FHISHRT__c</fullName>
        <description>11. Heart Conditions is the health condition</description>
        <label>FHISHRT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FHISOTHR__c</fullName>
        <description>17. Other is the health condition</description>
        <label>FHISOTHR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FHISOTSP__c</fullName>
        <description>17. Other Please specify is the health condition</description>
        <label>FHISOTSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FHISPYSI__c</fullName>
        <description>12. Physical Impairment is the health condition</description>
        <label>FHISPYSI</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FHISSEZ__c</fullName>
        <description>14. Seizure/Convulsions Problems is the health condition</description>
        <label>FHISSEZ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FHISWTLS__c</fullName>
        <description>16. Weight loss/Weight Gain/ Thyroid Problems is the health condition</description>
        <label>FHISWTLS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FHISWT__c</fullName>
        <description>15. Weight Issues is the health condition</description>
        <label>FHISWT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FHOVERALL__c</fullName>
        <description>How would you rate your [your child’s] overall health right now?</description>
        <label>FHOVERALL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>96</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FHSRED__c</fullName>
        <defaultValue>false</defaultValue>
        <description>3. Emergency Department is the service</description>
        <label>FHSRED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FHSRHOS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>3. Hospital is the service</description>
        <label>FHSRHOS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FHSROT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>3. Occupational Therapy is the service</description>
        <label>FHSROT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FHSRSUR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>3. Surgery is the service</description>
        <label>FHSRSUR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FHSRUC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>3. Urgent Care is the service</description>
        <label>FHSRUC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FHSRUK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>3. Unknown is the service</description>
        <label>FHSRUK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FHSR__c</fullName>
        <description>3. None is the service</description>
        <label>FHSR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINCOMNW__c</fullName>
        <description>5. What is the total income for the child&apos;s household?</description>
        <label>FINCOMNW</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>98</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINCOMSP__c</fullName>
        <description>5.  Total income, specified</description>
        <label>FINCOMSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINFAGCY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>6.  Collecting information from Agency Staff</description>
        <label>FINFAGCY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINFCHLD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>6.  Collecting information from Child</description>
        <label>FINFCHLD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINFCOLL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>6.  Collecting information from Collateral source</description>
        <label>FINFCOLL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINFFOS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>6.  Collecting information from Foster Parent</description>
        <label>FINFFOS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINFOADL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>6.  Collecting information from Other Adult Relative</description>
        <label>FINFOADL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINFOSP__c</fullName>
        <description>6.  Collecting information from Other Specified</description>
        <label>FINFOSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINFOTHR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>6.  Collecting information from Other</description>
        <label>FINFOTHR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINFPAR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>6.  Collecting information from Parent</description>
        <label>FINFPAR</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>